# quoridor

./: .env.example  .gitignore  Makefile  README.md  renovate.json
backend/: pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/api/: health.py
backend/app/api/v1/: games.py
backend/app/infrastructure/ai/: action_mask.py  evaluation.py  factory.py  mcts.py  minimax.py  ppo_loader.py  ppo_policy.py  search_actions.py
backend/app/infrastructure/persistence/: game_repository.py
backend/app/infrastructure/rl/: debug_repetition.py  env.py  eval_selfplay.py  move_resolution.py  selfplay_debug.py  train_ppo.py
backend/app/mappers/: game_mapper.py  observation_mapper.py
backend/app/middleware/: logging.py  metrics.py  rate_limit.py
backend/app/ports/: ai_policy.py  game_repository.py  metrics.py
backend/app/services/: game_service.py
backend/quoridor/: __init__.py  board_topology.py  pathfinding.py  pawn_moves.py  rules.py
backend/quoridor/domain/: actions.py  game.py  state.py
backend/tests/integration/: conftest.py  test_api.py
backend/tests/slow/: test_eval.py  test_legal_moves_perf.py
backend/tests/support/: fake_ai.py
backend/tests/unit/: test_ai_factory.py  test_anti_loop_eval.py  test_env.py  test_evaluation.py  test_health.py  test_mcts.py  test_mcts_budget.py  test_minimax.py  test_pathfinding.py  test_pathfinding_tier2.py  test_ppo_policy.py  test_rate_limit_middleware.py  test_rules.py  test_search_actions.py  test_selfplay_debug.py  test_wall_path.py
backend/tests/unit/fixtures/: plan_fixtures.json  plan_fixtures.py
(+27 files in other folders)
