[project]
name = "quoridor-backend"
version = "0.1.0"
description = "Quoridor game backend with AI/RL"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "gymnasium>=1.0.0",
]
rl = [
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.4.0,<3",
    "sb3-contrib>=2.4.0,<3",
    "tensorboard>=2.18.0",
    "pandas>=2.2,<3",
    "torch>=2.4,<3",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "quoridor"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
check_untyped_defs = true
packages = ["app", "quoridor"]

[[tool.mypy.overrides]]
module = ["sb3_contrib.*", "stable_baselines3.*", "gymnasium.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
